--- a/style.css
+++ b/style.css
@@ -1,11 +1,14 @@
-body{
-    font-family: Montserrat,sans-serif;
+body {
+    font-family: 'Montserrat', sans-serif;
+    background-color: #f0f0f0; /* Changer la couleur de fond */
+    color: #333;
 }
 
 .site-header {
     text-align: center;
-    width: 100px;
+    width: 100%;
     height: 65px;
+    background-color: #282c34; /* Couleur de fond pour l'en-tête du site */
 }
 
 .site-header > .container {
@@ -24,8 +27,9 @@ header.site-header {
 header.page-header {
     background-size: cover;
     background-position: 50% 50%; 
-    background-image: url(synthwave.jpg);
+    background-image: url(new-image.jpg); /* Nouvelle image */
     padding-top: 6rem;
+    color: #fff; /* Couleur du texte */
 }
 
 h1 {
@@ -34,14 +38,36 @@ h1 {
 }
 
 a > span {
-    float:right;
+    float: right;
 }
 
 .site-header > .container > a {
-    color: #fff;
+    color: #61dafb; /* Couleur des liens */
 }
 
 .site-header > .container > a:hover {
     text-decoration: none;
-    color: #fff;
+    color: #21a1f1; /* Couleur des liens au survol */
+}
+
+#controls {
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
+}
+
+#controls button {
+    margin: 5px;
+    padding: 10px;
+    font-size: 20px;
+    background-color: #282c34; /* Couleur de fond des boutons */
+    color: #fff; /* Couleur du texte des boutons */
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+#controls button:hover {
+    background-color: #61dafb; /* Couleur de fond des boutons au survol */
+    color: #282c34; /* Couleur du texte des boutons au survol */
 }
